244Initials/force-app/main/default/objects/ARTL_Callout_Event_Configs__mdt/ARTL_Callout_Event_Configs__mdt.object-meta.xml
<CustomObject>
    <label>ARTL_Callout_Event_Configs</label>
    <pluralLabel>ARTL_Callout_Event_Configs</pluralLabel>
</CustomObject>