244Initials/force-app/main/default/objects/ARTL_Callout_Event_Configs__mdt/fields/ARTL_EndPointURL__c.field-meta.xml
<CustomField>
    <fullName>ARTL_EndPointURL__c</fullName>
    <label>EndPointURL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>