244Initials/force-app/main/default/objects/ARTL_Callout_Event_Configs__mdt/fields/ARTL_IntegrationProcedureName__c.field-meta.xml
<CustomField>
    <fullName>ARTL_IntegrationProcedureName__c</fullName>
    <label>IntegrationProcedureName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>