244Initials/force-app/main/default/objects/ARTL_Callout_Event_Configs__mdt/fields/ARTL_NameCredentials__c.field-meta.xml
<CustomField>
    <fullName>ARTL_NameCredentials__c</fullName>
    <label>NameCredentials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>