244Initials/force-app/main/default/objects/ARTL_Callout_Event_Configs__mdt/fields/ARTL_Operation__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Operation__c</fullName>
    <label>Operation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
                <default>true</default>
                <label>GET</label>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>PATCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>