244Initials/force-app/main/default/objects/ARTL_Callout_Event_Configs__mdt/fields/ARTL_Pattern__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Pattern__c</fullName>
    <label>Pattern</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Async</fullName>
                <default>true</default>
                <label>Async</label>
            </value>
            <value>
                <fullName>Sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>