244Initials/force-app/main/default/objects/ARTL_Callout_Event_Configs__mdt/fields/ARTL_Retry__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Retry__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retry</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>