244Initials/force-app/main/default/objects/ARTL_Callout_Event_Configs__mdt/fields/ARTL_Type__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IP</fullName>
                <default>true</default>
                <label>Integration Procedure</label>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>